# zikeiretsu-rs

./: Cargo.toml  README.md  SPEC.md
base-128-variants/: Cargo.toml  (+1 more)
zikeiretsu/: .gitignore  Cargo.toml  README.md
zikeiretsu/example/io_local/: Cargo.toml
zikeiretsu/example/persist/: .gitignore  Cargo.toml
zikeiretsu/example/persist/src/: main.rs
zikeiretsu/example/persist/src/resources/: prices.json
zikeiretsu/example/persist_to_cloud/: .gitignore  Cargo.toml
zikeiretsu/example/persist_to_cloud/src/: main.rs
zikeiretsu/example/persist_to_local/: Cargo.toml
zikeiretsu/example/persist_to_local/src/: main.rs
zikeiretsu/example/persist_to_local/src/resources/: prices.json
zikeiretsu/src/: lib.rs
zikeiretsu/src/config/: mod.rs
zikeiretsu/src/tsdb/: dataframe.rs  datapoint.rs  datapoints_searcher.rs  field.rs  metrics.rs  mod.rs  timestamp_nano.rs  timestamp_sec.rs
zikeiretsu/src/tsdb/cloudstorage/: file_path.rs  gcp.rs  mod.rs
zikeiretsu/src/tsdb/data_types/: arrow_dataframe.rs  dataframe.rs  datapoint.rs  datapoints_searcher.rs  dataseries.rs  dataseries_ref.rs  field.rs  mod.rs  polar_dataframe.rs  time_series_dataframe.rs
zikeiretsu/src/tsdb/data_types/polars/: mod.rs
zikeiretsu/src/tsdb/datetime/: mod.rs  timestamp_nano.rs  timestamp_sec.rs  timezone.rs  util.rs
zikeiretsu/src/tsdb/engine/: context.rs  mod.rs  with_storage.rs
zikeiretsu/src/tsdb/query/: context.rs  mod.rs  option.rs  output.rs  parser.rs  query.pest
zikeiretsu/src/tsdb/query/eval/: describe_metrics.rs  merics_describe.rs  metrics.rs  metrics_list.rs  mod.rs  search_metrics.rs
zikeiretsu/src/tsdb/query/eval/output/: json.rs  mod.rs  parquet.rs  table.rs
zikeiretsu/src/tsdb/query/executor/: describe_metrics.rs  metrics_list.rs  mod.rs  search_metrics.rs
zikeiretsu/src/tsdb/query/executor/interface/: mod.rs
zikeiretsu/src/tsdb/query/executor/output/: json.rs  parquet.rs  table.rs
zikeiretsu/src/tsdb/query/executor_interface/: mod.rs
zikeiretsu/src/tsdb/query/lexer/: from.rs  mod.rs  select.rs  where.rs  with.rs
zikeiretsu/src/tsdb/query/parser/: columns_parser.rs  datetime_filter_parser.rs  from_clause.rs  mod.rs  order_or_limit_clause.rs  select_clause.rs  timezone_parser.rs  where_clause.rs  with_clause.rs
zikeiretsu/src/tsdb/query/parser/clause/: from_clause.rs  mod.rs  order_or_limit_clause.rs  select_clause.rs  where_clause.rs  with_clause.rs
zikeiretsu/src/tsdb/query/parser/parts/: ascii_digits.rs  ascii_digits_parser.rs  boolean.rs  clock_parser.rs  columns_parser.rs  datetime_filter_parser.rs  duration_parser.rs  mod.rs  pos_neg_parser.rs  timezone_parser.rs
zikeiretsu/src/tsdb/repl/: mod.rs  validator.rs
zikeiretsu/src/tsdb/search/: binary_search.rs  linear_search.rs  mod.rs
zikeiretsu/src/tsdb/storage/: mod.rs
zikeiretsu/src/tsdb/storage/api/: cloud_setting.rs  mod.rs  read.rs  write.rs
zikeiretsu/src/tsdb/storage/api/repair/: blocklist.rs
zikeiretsu/src/tsdb/storage/block/: field_type_convert.rs  mod.rs  read.rs  write.rs
zikeiretsu/src/tsdb/storage/block/compress/: mod.rs
zikeiretsu/src/tsdb/storage/block_list/: block_timestamp.rs  mod.rs
zikeiretsu/src/tsdb/storage/cache/: block_cache.rs  block_list_cache.rs  mod.rs
zikeiretsu/src/tsdb/storage/persisted_error/: mod.rs
zikeiretsu/src/tsdb/storage/traverse/: mod.rs
zikeiretsu/src/tsdb/storage/wal/: mod.rs  single_file_wal.rs
zikeiretsu/src/tsdb/store/: mod.rs  read_only_store.rs  writable_store.rs
zikeiretsu/src/tsdb/store/writable_store/: mod.rs  persistence.rs  sorter.rs
zikeiretsu/src/tsdb/util/: mod.rs  vec.rs
(+28 files in other folders)
