[package]
name = "zikeiretsu"
version = "0.1.4"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["validate"]

validate = []

[[bin]]
name = "zikeiretsu"
path = "src/bin/main.rs"

[dependencies]
bits-ope = { path = "../bits-ope" }
xor-encoding = { path = "../xor-encoding" }
simple8b-rle = { path = "../simple8b-rle" }
base-128-variants = {path ="../base-128-variants" }
file-dougu = { git = "https://github.com/tacogips/file-dougu-rs", tag = "0.1.8" }
#file-dougu = { git = "https://github.com/tacogips/file-dougu-rs", branch = "feature/debug1" }

chrono = "0.4"
lazy_static = "1"
strum = { version = "0.21", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features= ["rt-multi-thread","macros"] }
async-trait = "0.1"
memmap2 = "0.3"
itertools = "0.10"
lockfile = "0.2"
url = "2"
log = "0.4"
futures = "0.3"
serde = "1"
serde_json = "1"
owning_ref = "0.4"
argh = "0.1"
regex = "1"
dotenv = "0.15"

[dev-dependencies]
tempfile = "3.2"
tempdir = "0.3"
tokio-test = "0.4"
