[package]
name = "persist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = []

[features]
upload_to_cloud=[]

[dependencies]
chrono = "0.4"
serde = "1"
serde_json = "1"
zikeiretsu = {path = "../.."}

tokio = {version= "1",features= ["full"]}
tempdir = "0.3"

tracing = "0.1"
tracing-subscriber = {version = "0.2", features = ["env-filter"]}
tracing-log = "0.1"
dotenv = "0.15.0"
