[package]
name = "io_cloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = []


[dependencies]
chrono = "0.4"
serde = "1"
serde_json = "1"
zikeiretsu = {path = "../.."}

tokio = {version= "1", features= ["full"]}
tempdir = "0.3"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.14"
uuid = {version= "0.8.2" ,features= ["v4"]}
