[package]
name = "io_local"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = []


[dependencies]
chrono = "0.4"
serde = "1"
serde_json = "1"
zikeiretsu = {path = "../.."}

tokio = {version= "1",features= ["full"]}
tempdir = "0.3"
